Prevent line wrapping in suggestion popup

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 .completr-suggestion-item {
     padding: 5px 10px 5px 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .completr-suggestion-placeholder {
